help/components/v2/list.md
---
title: Listenkomponente (v2)
description: Die Kernkomponente „Listenkomponente“ ermöglicht die einfache Erstellung dynamischer sowie statischer Listen.
role: Developer, Admin, User
exl-id: fa34be64-b345-45cd-baf3-571973414852
index: false
TQID: https://experienceleague.adobe.com/9zz16bJ7tDpOSntRTbPDUJQIabSAmIfvRPCD067tQXc
product_v2:
  - id: c45915cf-e157-4af7-a80d-97b905bcb3a5
  - id: fd1f54a9-f50c-467d-8956-cebbaf4f3eb8
feature_v2:
  - id: e2c1b6d3-bb7e-4fe8-8c72-f7b403298e91
role_v2:
  - id: b69b2659-1057-424e-8fc5-ed9e016dc554
  - id: c66ffd68-0f65-42bb-aa23-b4020f12e0bd
  - id: ff6a42d2-313e-452e-93a6-792e4fad9ff8
source-git-commit: 73aa5234ac63fa3be99feebce448bb6722513838
workflow-type: tm+mt
source-wordcount: 1020
ht-degree: 100%

---

# Listenkomponente (v2) {#list-component}

Die Kernkomponente „Listenkomponente“ ermöglicht die einfache Erstellung dynamischer sowie statischer Listen.

## Nutzung {#usage}

Die Listenkomponente kann beispielsweise zum Erstellen einer dynamischen Liste von untergeordneten Seiten oder einer statischen Liste von willkürlich definierten Elementen verwendet werden. Der Typ der verfügbaren Listen und Formatierungsoptionen kann vom Vorlagenautor im [Dialogfeld „Design“](#design-dialog) definiert werden. Der Inhaltseditor kann aus verfügbaren Listentypen und Elementen zum Formatieren der Listen im [Dialogfeld „Bearbeiten“](#edit-dialog) auswählen.

## Version und Kompatibilität {#version-and-compatibility}

In diesem Dokument wird die v1 der Listenkomponente beschrieben, die ursprünglich mit Version 2.0.0 der Kernkomponenten im Januar 2018 eingeführt wurde.

>[!CAUTION]
>
>In diesem Dokument wird die v2 der Listenkomponente beschrieben.
>
>Weitere Informationen zur aktuellen Version der Listenkomponente finden Sie im Dokument [Listenkomponente](/help/components/list.md).

## Redirects in Listen {#redirects}

Wenn eine Seite ein Redirect-Ziel hat (unabhängig davon, ob sie auf eine externe URL oder eine andere AEM verweist), dann verweist eine Liste mit Links darauf direkt auf die URL des Redirect-Ziels.

### Beispiel {#redirect-example}

* Erstellen Sie eine Seite A, die zu Seite B umleitet.
* Erstellen Sie eine Seite C, die zu `https://aemcomponents.dev` umleitet.
* Fügen Sie auf einer Seite D eine Listenkomponente ein, die die Seiten A und C enthält.
* Die entsprechenden generierten Links verweisen dann direkt auf Seite B und `https://aemcomponents.dev`

## Musterkomponentenausgabe {#sample-component-output}

Um die Listenkomponente und Beispiele für die Konfigurationsoptionen sowie HTML- und JSON-Ausgaben zu erhalten, besuchen Sie die [Komponentenbibliothek](https://adobe.com/go/aem_cmp_library_list_de).

### Technische Details {#technical-details}

Die aktuelle technische Dokumentation zur Listenkomponente [finden Sie auf GitHub](https://adobe.com/go/aem_cmp_tech_list_v2_de).

Weitere Informationen zur Entwicklung von Kernkomponenten finden Sie in der [Dokumentation zu Kernkomponenten für Entwickler](/help/developing/overview.md).

## Dialogfeld „Bearbeiten“ {#edit-dialog}

Im Dialogfeld „Bearbeiten“ kann der Inhaltsautor die Liste und die Listenelemente konfigurieren.

### Registerkarte „Listen-Einstellungen“ {#list-settings-tab}

Die Liste kann auf verschiedene Weise erstellt werden.

* [Untergeordnete Seiten](#child-pages)
* [Liste fester Werte](#fixed-list)
* [Suche](#search-options)
* [Tags](#tags)

Unabhängig davon, wie die Liste erstellt wurde, stehen Optionen für [Sortieren und ID](#sort-options) zur Verfügung, die immer konfiguriert werden können.

![Dialogfeld „Bearbeiten“ der Listenkomponente](/help/assets/v2/list-edit.png)

Je nachdem, wie der Inhaltsautor die Liste erstellt, werden die zusätzlichen Konfigurationsoptionen geändert.

#### Untergeordnete Seiten {#child-pages}

Die Liste kann aus den untergeordneten Seiten der aktuellen Seite oder einer anderen Seite bestehen.

![Optionen für untergeordnete Seiten](/help/assets/v2/list-edit-child-pages.png)

* **Übergeordnete Seite**
   * Die Seite, deren untergeordnete Seiten in die Liste aufgenommen werden sollen
   * Frei lassen, um aktuelle Seite zu verwenden

* **Elementtiefe**
Wie viele Ebenen in der Hierarchie verwendet werden sollten

#### Liste fester Werte {#fixed-list}

Die Liste kann mit einer Liste mit festen Elementen erstellt werden.

![Optionen für Listen fester Werte](/help/assets/v2/list-edit-fixed-list.png)

Tippen oder klicken Sie auf die Schaltfläche **Hinzufügen**, um ein neues Element in die Liste einzufügen.

* Geben Sie Text für das Element in der Liste ein oder wählen Sie im **Dialogfeld „Auswahl“** ein Element aus AEM aus.
* Mit dem Ziehpunkt können Sie die Elemente in der Liste neu anordnen.
* Verwenden Sie das Papierkorbsymbol, um Elemente in der Liste zu löschen.

#### Suche {#search-options}

Die Liste kann mithilfe der Ergebnisse einer Suche aus AEM-Inhalten erstellt werden.

![Optionen für die Suchliste](/help/assets/v2/list-edit-search.png)

* **Suchanfrage**
Die Zeichenfolge, für die eine Volltextsuche ausgeführt wird, um die Listenelemente zu generieren
* **Suche in**
Wo die Suche ausgeführt werden soll
   * Wählen Sie im **Dialogfeld „Auswahl“** den Speicherort in AEM aus
   * Aktuelle Seite verwenden, wenn leer

#### Tags {#tags}

Die Liste kann mithilfe von Seiten erstellt werden, die bestimmten Tags unter einem bestimmten Ort entsprechen.

![Optionen für die Tag-Liste](/help/assets/v2/list-edit-tags.png)

* **Übergeordnete Seite**
Wo die Tag-Abstimmung beginnen sollte
   * Wählen Sie im **Dialogfeld „Auswahl“** den Speicherort in AEM aus
   * Aktuelle Seite verwenden, wenn leer
* **Tags**
Welche Tags abgestimmt werden sollten
   * Verwenden Sie das Dialogfeld **Durchsuchen**, um die Tags auszuwählen.
* **Übereinstimmung**
Definieren Sie, welche Art von Übereinstimmung eine Seite dazu qualifizieren soll, in die Liste aufgenommen zu werden
   * **beliebiges Tag**
   * **alle Tags**

#### Sortieroptionen {#sort-options}

Unabhängig davon, wie Sie die Liste erstellen, gibt es bestimmte Sortieroptionen, die immer definiert werden können.

![Sortieroptionen](/help/assets/v2/list-edit-sort-options.png)

* **Sortieren nach**
Wie die Elemente sortiert werden sollen
   * **Titel**
   * **Datum der letzten Änderung**
* **Sortierreihenfolge**
Die Reihenfolge, in der die Elemente sortiert werden sollen
   * **Aufsteigend**
   * **Absteigend**
* **Maximale Elemente**
Die maximale Anzahl der in der Liste angezeigten Elemente.
   * Leer lassen, um alle Elemente zurückzugeben.
* **ID** – Diese Option dient zur Kontrolle der eindeutigen Kennung der Komponente in der HTML-Datei und auf der [Datenschicht](/help/developing/data-layer/overview.md).
   * Wenn Sie das Feld leer lassen, wird automatisch eine eindeutige ID generiert, die Sie über die resultierende Seite finden.
   * Sofern eine ID angegeben wird, ist vom Autor bzw. der Autorin sicherzustellen, dass diese eindeutig ist.
   * Änderungen der ID können sich auf das CSS-, JS- und Datenschicht-Tracking auswirken.

### Registerkarte „Element-Einstellungen“ {#item-settings-tab}

Auf der Registerkarte „Element-Einstellungen“ kann die Formatierung der Listenelemente konfiguriert werden.

![Elementeinstellungen](/help/assets/v2/list-edit-item-settings.png)

* **Elemente verknüpfen**
Verknüpft Elemente mit der entsprechenden Seite
* **Beschreibung anzeigen**
Zeigt Beschreibungen des verknüpften Elements an
* **Datum anzeigen**
Zeigt das Bearbeitungsdatum des verknüpften Elements an

## Dialogfeld „Design“ {#design-dialog}

Über das Dialogfeld „Design“ kann der Vorlagenautor festlegen, welche Listentypen für Inhaltsautoren erlaubt und welche Elementeinstellungen verfügbar sind.

### Listen-Einstellungen {#list-settings}

Auf der Registerkarte **Listen-Einstellungen** kann das Datumsformat sowie der Listentyp definiert werden, der in der Komponente den Inhaltsautoren zur Verfügung stehen soll.

![Listeneinstellung im Dialogfeld „Design“ der Listenkomponente](/help/assets/v2/list-design-list-settings.png)

* **Datumsformat**
Das Format für die Anzeige des letzten Änderungsdatums
* **Untergeordnete Elemente deaktivieren**
Deaktiviert den untergeordneten Listentyp in der Komponente
* **Statische Anzeige deaktivieren**
Deaktiviert den statischen Listentyp in der Komponente
* **Suche deaktivieren**
Deaktiviert den Suchlistentyp in der Komponente
* **Tags deaktivieren**
Deaktiviert den Tag-Listentyp in der Komponente

### Elementeinstellungen {#item-settings}

Auf der Registerkarte **Element-Einstellungen** können die Formatierungsoptionen für die einzelnen Listenelemente definiert werden, die in der Komponente für die Inhaltsautoren verfügbar sein sollten.

![Elementeinstellungen im Dialogfeld „Design“ der Listenkomponente](/help/assets/v2/list-design-item-settings.png)

* **Elemente verknüpfen**
Aktivieren Sie die Option „Elemente verknüpfen“ im [Dialogfeld „Bearbeiten“](#edit-dialog)
* **Beschreibungen anzeigen**
Aktivieren Sie die Option „Beschreibungen anzeigen“ im [Dialogfeld „Bearbeiten“](#edit-dialog)
* **Datum anzeigen**
Aktivieren Sie die Option „Datum anzeigen“ im [Dialogfeld „Bearbeiten“](#edit-dialog)

### Registerkarte „Arten“ {#styles-tab}

Die Bildkomponente unterstützt das AEM-[Stilsystem](/help/get-started/authoring.md#component-styling).

## Adobe Client-Datenschicht {#data-layer}

Die Listenkomponente unterstützt die [Adobe Client-Datenschicht](/help/developing/data-layer/overview.md).
